# equalizer_cw

./: CMakeLists.txt  README.md  main.cpp  main.qrc
filters/: fdacoefs.h  fdacoefs_1.h  fdacoefs_10.h  fdacoefs_11.h  fdacoefs_12.h  fdacoefs_13.h  fdacoefs_14.h  fdacoefs_2.h  fdacoefs_3.h  fdacoefs_4.h  fdacoefs_5.h  fdacoefs_6.h  fdacoefs_7.h  fdacoefs_8.h  fdacoefs_9.h  filters.py  tmwtypes.h
lib/kiss_fft130/tools/: fastconv_float  fastconvr_float  fft_float
res/: main.qml
src/: AudioPlayer.cpp  AudioPlayer.h  AudioPlayerController.cpp  AudioPlayerController.h  AudioProcessor.cpp  AudioProcessor.h  AudioSpectre.cpp  AudioSpectre.h  DecodedAudioIterator.cpp  DecodedAudioIterator.h  DecodedAudioReciever.cpp  DecodedAudioReciever.h  Echo.h  Effect.h  Filter.h  Overdrive.h  SecondOrderSection.cpp  SecondOrderSection.h  SosFilterController.cpp  SosFilterController.h
src/filters/: fdacoefs.h
